Fix Menu Burger on Mobile.

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,17 +41,19 @@
     clip-path: polygon(0 20%, 100% 0, 100% 100%, 9% 100%);
   }
 
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
+  @media (min-width: 1440px) {
+    ::-webkit-scrollbar {
+      width: 10px;
+    }
 
-  ::-webkit-scrollbar-track {
-    background: var(--middle-blue);
-  }
+    ::-webkit-scrollbar-track {
+      background: var(--middle-blue);
+    }
 
-  ::-webkit-scrollbar-thumb {
-    background: var(--light-blue);
-    border-radius: 10px;
+    ::-webkit-scrollbar-thumb {
+      background: var(--light-blue);
+      border-radius: 10px;
+    }
   }
 
   .wave-background {
